Fixed maven build. Fixed unit tests. Update network fault methods to add an argument specifying the network interface.

--- a/src/main/conf/log4j.properties
+++ b/src/main/conf/log4j.properties
@@ -11,13 +11,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License. See accompanying LICENSE file.
 
-log4j.rootLogger=INFO, appender1, appender2
+log4j.rootLogger=INFO, file, stdout
 
-log4j.appender.appender1=org.apache.log4j.FileAppender
-log4j.appender.appender1.File=ape.log
+log4j.appender.file=org.apache.log4j.RollingFileAppender
+log4j.appender.file.File=anarchyape.log
+log4j.appender.file.MaxFileSize=1MB
+log4j.appender.file.MaxBackupIndex=2
+log4j.appender.file.layout=org.apache.log4j.PatternLayout
+log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
-log4j.appender.appender2=org.apache.log4j.ConsoleAppender
-
-
-log4j.appender.appender1.layout=org.apache.log4j.PatternLayout
-log4j.appender.appender2.layout=org.apache.log4j.TTCCLayout
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.log4j.TTCCLayout
